# verra-ai

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  README.md  test_bedrock.py
.claude/: settings.json
code/: CONTRIBUTING.md  Makefile  README.md  SECURITY.md
code/backend/services/gateway/: Dockerfile  README.md  pyproject.toml
code/backend/services/gateway/app/: __init__.py  config.py  main.py
code/backend/services/gateway/tests/: test_health.py  test_routing.py
code/backend/services/ingestion/: Dockerfile  README.md  pyproject.toml
code/backend/services/ingestion/app/: __init__.py  classify.py  config.py  extract.py  extract_ais.py  extract_common.py  extract_form16.py  extract_form26as.py  main.py  pipeline.py  schemas.py
code/backend/services/ingestion/tests/: __init__.py  samples.py  test_classify.py  test_extract_ais.py  test_extract_form16.py  test_extract_form26as.py  test_ingest_api.py
code/backend/services/model_gateway/: Dockerfile  README.md  pyproject.toml
code/backend/services/model_gateway/app/: __init__.py  config.py  main.py  providers.py
code/backend/services/model_gateway/tests/: test_providers.py
code/backend/services/orchestrator/: Dockerfile  README.md  pyproject.toml
code/backend/services/orchestrator/app/: __init__.py  clients.py  config.py  main.py  schemas.py  tools.py
code/backend/services/orchestrator/app/core/: citations.py  critic.py  executor.py  planner.py  prompts.py  router.py  run_store.py  supervisor.py
code/backend/services/orchestrator/tests/: conftest.py  test_approvals.py  test_critic.py  test_health.py  test_portfolio_flow.py  test_run_flow.py
design/: design-tokens.css  design-tokens.json  figma-build-spec.md  hazel-ux-reference.md  ideation-ux-reference.md  verra-prototype-glass.html  (+1 more)
(+196 files in other folders)
