[project]
name = "verra-ingestion"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = ["fastapi>=0.111", "uvicorn[standard]>=0.30", "pydantic>=2.7", "httpx>=0.27", "verra-shared", "pydantic-settings>=2.2", "structlog>=24.1", "prometheus-client>=0.20"]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
