[project]
name = "verra-model_gateway"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "structlog>=24.1",
  "prometheus-client>=0.20",
  "anthropic[bedrock]>=0.40",
  "boto3>=1.34",
  "openai>=1.30",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
